--- a/Project/ojakgyo/package.json
+++ b/Project/ojakgyo/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.0.0-beta.20",
     "core-js": "^3.6.5",
+    "sass": "^1.29.0",
+    "sass-loader": "^10.1.0",
     "vue": "^2.6.11",
     "vue-beautiful-chat": "^2.5.0",
     "vue-bot-ui": "^0.2.4",
