--- a/.github/workflows/telegram_msg.yml
+++ b/.github/workflows/telegram_msg.yml
@@ -1,5 +1,6 @@
 name: telegram message
 on: 
+  status:
   push:
     branches:
       - master
@@ -49,13 +50,12 @@ jobs:
         to: ${{ secrets.TELEGRAM_TO_FIRE }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: | 
-          [+] 커밋 ${{ github.sha }}(이)가 
-          ${{ github.ref }}에 Push 되었습니다.
-          ${{ github.event.push.user.login }}(이)가 Push 했습니다.
+          [+] 커밋 ${{ github.event.commit.sha }}(이)가 
+          ${{ github.event.repository.name }}에 Push 되었습니다.
+          ${{ github.actor }}(이)가 Push 했습니다.
           
           =/=/=/= Commit Message =/=/=/=
           ${{ github.event.head_commit.message }}
           =/=/=/=/=/=   END   =/=/=/=/=/=
+      
           
-          
-          ${{ github.event.push.html_url }}
