--- a/Project/ojakgyo/package.json
+++ b/Project/ojakgyo/package.json
@@ -9,13 +9,16 @@
   },
   "dependencies": {
     "@vue/composition-api": "^1.0.0-beta.20",
+    "babel-runtime": "^6.26.0",
     "core-js": "^3.6.5",
     "sass": "^1.29.0",
     "sass-loader": "^10.1.0",
     "vue": "^2.6.11",
     "vue-beautiful-chat": "^2.5.0",
     "vue-bot-ui": "^0.2.4",
-    "vue-router": "^3.4.9"
+    "vue-markdown": "^2.2.4",
+    "vue-router": "^3.4.9",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
