--- a/Project/ojakgyo/src/package.json
+++ b/Project/ojakgyo/src/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "@vue/cli-service": "^4.5.9"
+    "@vue/cli-service": "^4.5.9",
+    "vue-comment-grid": "^1.0.12",
+    "vue-disqus": "^4.0.1"
   }
 }
