--- a/Project/ojakgyo/package.json
+++ b/Project/ojakgyo/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/vue-fontawesome": "^2.0.0",
     "@vue/composition-api": "^1.0.0-beta.20",
     "babel-runtime": "^6.26.0",
     "core-js": "^3.6.5",
@@ -16,7 +19,8 @@
     "vue": "^2.6.11",
     "vue-beautiful-chat": "^2.5.0",
     "vue-bot-ui": "^0.2.4",
-    "vue-markdown": "^2.2.4",
+    "vue-comment-grid": "^1.0.12",
+    "vue-disqus": "^4.0.1",
     "vue-router": "^3.4.9",
     "vuex": "^3.6.0"
   },
