--- a/Project/ojakgyo/src/package.json
+++ b/Project/ojakgyo/src/package.json
@@ -3,6 +3,8 @@
     "@vue/cli-service": "^4.5.9",
     "vue-comment-grid": "^1.0.12",
     "vue-disqus": "^4.0.1",
-    "vue-like-dislike-buttons": "^0.2.4"
+    "vue-like-dislike-buttons": "^0.2.4",
+    "vue-real-wave": "^1.0.4",
+    "vue-waves-effect": "^1.0.0"
   }
 }
