--- a/Project/ojakgyo/src/package.json
+++ b/Project/ojakgyo/src/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/vue-fontawesome": "^2.0.0",
     "@vue/cli-service": "^4.5.9",
     "vue-comment-grid": "^1.0.12",
     "vue-disqus": "^4.0.1",
