Fix/Work commit: Resolved some major issues and added inital progress visualization of our work.

--- a/Project/ojakgyo/package.json
+++ b/Project/ojakgyo/package.json
@@ -22,6 +22,7 @@
     "vue-comment-grid": "^1.0.12",
     "vue-disqus": "^4.0.1",
     "vue-like-dislike-buttons": "^0.2.4",
+    "vue-real-wave": "^1.0.4",
     "vue-router": "^3.4.9",
     "vuex": "^3.6.0"
   },
